# myGAMESS

gamess/: .travis.yml  DEVELOPERS.md  INPUT.DOC  INTRO.DOC  IRON.DOC  PROG.DOC  README.md  REFS.DOC  TESTS.DOC  _VERSION_  comp  compall  config  gms-files.csh  lked  rungms
gamess/.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
gamess/auxdata/BASES/: SPKRDZC  SPKRDZCD  SPKRQZC  SPKRQZCD  SPKRTZC  SPKRTZCD
gamess/auxdata/QUANPOL/: CHARMM22.CMAP  WATERIONS.LIB  amino10.in  amino12.in  aminoct12.in
gamess/ddi/: compddi  readme.ddi
gamess/ddi/src/: ddi.c  ddi.h  ddi_acc.c  ddi_base.h  ddi_comm.c  ddi_comm_create.c  ddi_create.c  ddi_destroy.c  ddi_dlb_proc.c  ddi_finalize.c  ddi_fortran.c  ddi_fortran.h  ddi_gdlb.c  ddi_get.c  ddi_getacc.c  ddi_index.c  ddi_init.c  ddi_memory.c  ddi_memory.h  ddi_put.c  ddi_runtime.c  ddi_runtime.h  ddi_scatter_acc.c  ddi_server.c  mysystem.h  shmem_ipc.c  tcp_sockets.c
gamess/ddi/test/: dda_test.f  ddi_test.f
gamess/libcchem/: ALL_BUILD.vcproj  CChem.sln  LIBCCHEM.md  Makefile.in  README.md  ZERO_CHECK.vcproj  build-cchem  cchem.vcproj  configure  configure.ac
gamess/libcchem/boost/: Makefile
gamess/libcchem/config/: ax_cuda.m4  config.h.in
gamess/libcchem/examples/: Makefile.in
gamess/libcchem/rysq/: aclocal.m4  configure  configure.ac
gamess/libcchem/rysq/src/kernel/: Makefile.am  Makefile.in  derivative-overlap-quadrature-impl.hpp  derivative-overlap-quadrature-impl.hpp.tmpl  derivative-overlap-quadrature.hpp  derivative-threec-quadrature-impl.hpp  derivative-threec-quadrature-impl.hpp.tmpl  derivative-twoc-quadrature-impl.hpp  derivative-twoc-quadrature-impl.hpp.tmpl  overlap-recurrence.hpp  quadrature.hpp  quadrature1.hpp  ri-derivative-eri-quadrature.hpp  ri-derivative-quadrature1.hpp  ri-eri-quadrature.hpp  ri-forward.hpp  ri-int-new.hpp  ri-int.hpp  ri-int1.hpp  ri-quadrature1.hpp  ri-threec-recurrence.hpp  ri-twoc-recurrence.hpp  twoc-quadrature-impl.hpp  twoc-quadrature-impl.hpp.tmpl
gamess/libcchem/src/: Makefile.am  Makefile.in  runtime.cpp  runtime.hpp
gamess/libcchem/src/adapter/: Makefile.in
gamess/libcchem/src/array/: Makefile.in  array.hpp  ga.hpp  hdf5.hpp  memory.hpp
gamess/libcchem/src/basis/: Makefile.in  basis.cpp  basis.hpp  molecule.hpp  shell.hpp
gamess/libcchem/src/bindings/: Makefile.in  bindings.cpp  bindings.h  fortran.cpp  gamess.cpp  gamess.h
gamess/libcchem/src/cc/: Makefile.in
gamess/libcchem/src/core/: Makefile.in  wavefunction.hpp
gamess/libcchem/src/hf/: Makefile.in
gamess/libcchem/src/integrals/: Makefile.in  hermite.hpp  overlap-integrals.hpp  quartet.hpp  ri-int.hpp  ri-rysq.hpp
gamess/libcchem/src/libint_interface/: Makefile.am  Makefile.in  libcchem_libint.cpp  libcchem_libint.h  prep_libint2.h
gamess/libcchem/src/matrix/: Makefile.in
gamess/libcchem/src/mp2/: Makefile.in  energy.cpp
gamess/libcchem/src/ri-mp2/: DFIntGradient.cpp  DFIntGradient.hpp  ERIContractionEnergyAccum.hpp  JK.cpp  JK.hpp  Makefile.am  Makefile.in  device.hpp  deviceGradientEngine.cpp  deviceGradientEngine.hpp  god.hpp  gradient-helpers.cpp  gradient-helpers.hpp  math.hpp  metric.cpp  metric.hpp  ri-async.cpp  ri-async.hpp  ri-energy-terms.hpp  ri-energy.cpp  ri-gradient.cpp  ri-gradient.hpp  ri-integrals.hpp  ri-lagrangian.cpp  ri-lagrangian.hpp  ri-openshell-work.hpp  ri-zvector.cpp  ri-zvector.hpp  rimp2.hpp  three-center-work.cpp  three-center-work.hpp
gamess/libcchem/src/ri-mp2/kernel/: Makefile.am  Makefile.in  ri-energy-kernel.cu  ri-gradient-kernel.cu
gamess/libcchem/src/utility/: Makefile.in
gamess/libcchem/tools/: rungms.bolt.sge  rungms.psg.slurm
gamess/machines/: readme.microsoft  readme.unix
gamess/misc/: wrapgms
gamess/source/: aldeci.src  algnci.src  basccn.src  basminix.src  blkint.src  casino.src  ccddi.src  cchdmy.src  cchem.src  ccsdt.src  ceeis.src  cepa.src  chgpen.src  ciminf.src  cimsub.src  cisgrd.src  cnglob.src  comp.src  cosmo.src  cphf.src  cpmchf.src  cprohf.src  cpuhf.src  dcgues.src  dcint2.src  dclib.src  dcmp2.src  dcscf.src  ddilib.src  demrpt.src  dft.src  dftbfo.src  dftbgr.src  dftbhs.src  dftblb.src  dftbsk.src  dftbtd.src  dftbx.src  dftdis.src  dftgrd.src  (+191 more)
gamess/tests/: README.md  TIMINGS.md  TIMINGS.xlsx  checkgms.py  checkgms_parsers.py  checkgms_stable.py  checkgms_utils.py  coverage  coverage.dat.small  coverage.dat.travis-ci  parse.inp  queuetest.py  runtest.py  timings
gamess/tools/: addomp.sh  checkgms  gms  localgms  mbldr.f
(+2302 files in other folders)
